update program table

--- a/program/index.html
+++ b/program/index.html
@@ -63,7 +63,7 @@
     <table>
         <tr>
             <td class="date" rowspan="2">
-                8:20 - 8:30am
+                <b>8:20 - 8:30am</b>
             </td>
             <td class="title-special">
                 Registration and Coffee &amp; Tea!
@@ -71,7 +71,7 @@
         </tr>
         <tr>
             <td class="abstract">
-                We will have a brief welcome and introduction to the SICSI workshop by our chairs Dr. Christopher Rouff and Dr. Lanier Watkins.
+                A brief welcome and introduction to the SICSI workshop by our chairs Dr. Christopher Rouff and Dr. Lanier Watkins.
             </td>
         </tr>
     </table>
@@ -79,7 +79,7 @@
     <table id="PUTSPEAKERNAMEHERE">
         <tr>
             <td class="date" rowspan="3">
-                8:30-9:00am
+                <b>8:30 - 9:00am</b>
             </td>
             <td class="title">
                 Reconfiguration of Firewall Filter Rules as a Response to Industrial Control System Intrusion
@@ -100,7 +100,7 @@
     <table id="PUTSPEAKERNAMEHERE">
         <tr>
             <td class="date" rowspan="3">
-                9:00-9:30am
+                <b>9:00 - 9:30am</b>
             </td>
             <td class="title">
                 ICS-SimLab: A Containerized Approach for Simulating Industrial Control Systems for Cyber Security Research 
@@ -121,7 +121,7 @@
     <table id="PUTSPEAKERNAMEHERE">
         <tr>
             <td class="date" rowspan="3">
-                9:30-10:00am
+                <b>9:30 - 10:00am</b>
             </td>
             <td class="title">
                 Dark Drones: Can They Be Automatically Detected and Mitigated?
@@ -142,7 +142,7 @@
     <table id="PUTSPEAKERNAMEHERE">
         <tr>
             <td class="date" rowspan="3">
-                10:00-10:30am
+                <b>10:00 - 10:30am</b>
             </td>
             <td class="title">
                 Applying Prompt-Based Mitigation of Gender-Role Bias in Large Language Models for Security 
@@ -163,7 +163,7 @@
     <table>
         <tr>
             <td class="date" rowspan="2">
-                10:30-11:00am
+                <b>10:30 - 11:00am</b>
             </td>
             <td class="title-special">
                 Coffee &amp; Tea Break
@@ -217,7 +217,7 @@
     <table id="PUTSPEAKERNAMEHERE">
         <tr>
             <td class="date" rowspan="3">
-                11:00-11:30am
+                <b>11:00 - 11:30am</b>
             </td>
             <td class="title">
                 An Autonomic Resilient Electrical Grid for a University Campus
@@ -238,7 +238,7 @@
     <table id="PUTSPEAKERNAMEHERE">
         <tr>
             <td class="date" rowspan="3">
-                11:30-12:00pm
+                <b>11:30 - 12:00pm</b>
             </td>
             <td class="title">
                 A Minimal Overlay-Based Framework for Transitioning Legacy Infrastructure to Zero Trust
